--- a/app/src/main/res/drawable/bg_card_radius.xml
+++ b/app/src/main/res/drawable/bg_card_radius.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white"/> <!-- Obligatorio para que clipToOutline funcione -->
+    <solid android:color="#0369A1"/> <!-- Obligatorio para que clipToOutline funcione -->
     <corners android:radius="16dp"/>
 </shape>
