--- a/app/src/main/res/drawable/contenedor_background_plomo.xml
+++ b/app/src/main/res/drawable/contenedor_background_plomo.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#8090A4AE" />
+            <solid android:color="#F2F2F2" />
             <corners android:radius="10dp" />
         </shape>
     </item>
