--- a/app/src/main/res/layout/activity_pantalla_administrador_agregar_colaborador.xml
+++ b/app/src/main/res/layout/activity_pantalla_administrador_agregar_colaborador.xml
@@ -35,7 +35,8 @@
             android:layout_marginTop="12dp"
             android:text="Agregar Colaborador"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#000"/>
 
     </LinearLayout>
 
@@ -68,7 +69,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Nombres"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="#000" />
 
             <EditText
                 android:id="@+id/etNombreColab"
@@ -78,6 +80,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_input"
                 android:hint="JUAN CARLOS"
+                android:textColor="#636363"
                 android:textSize="14sp"
                 android:padding="12dp" />
 
@@ -89,7 +92,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Apellidos"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="#000" />
 
             <EditText
                 android:id="@+id/etApellidosColab"
@@ -99,6 +103,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_input"
                 android:hint="PEREZ TORREBLANCA"
+                android:textColor="#636363"
                 android:textSize="14sp"
                 android:padding="12dp" />
 
@@ -123,7 +128,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Tipo Doc."
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textColor="#000"/>
 
                     <Spinner
                         android:id="@+id/spinnerDoc"
@@ -131,6 +137,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_input"
+                        android:textColor="#636363"
                         android:padding="12dp"
                         android:spinnerMode="dropdown" />
                 </LinearLayout>
@@ -148,7 +155,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="N° de Documento"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textColor="#000"/>
 
                     <EditText
                         android:id="@+id/etNumDoc"
@@ -156,6 +164,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_input"
+                        android:textColor="#636363"
                         android:hint="70707070"
                         android:textSize="14sp"
                         android:padding="14dp"
@@ -173,7 +182,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Correo Electrónico"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="#000"/>
 
             <EditText
                 android:id="@+id/etCorreoColab"
@@ -182,6 +192,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_input"
+                android:textColor="#636363"
                 android:hint="mail@miempresa.com"
                 android:textSize="14sp"
                 android:padding="12dp"
@@ -196,7 +207,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Teléfono"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="#000" />
 
             <EditText
                 android:id="@+id/etTelefonoColab"
@@ -205,6 +217,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_input"
+                android:textColor="#636363"
                 android:hint="987654321"
                 android:textSize="14sp"
                 android:padding="12dp"
@@ -219,7 +232,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:text="Cargo / Ocupación"
                 android:textSize="16sp"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="16dp"
+                android:textColor="#000"/>
 
             <Spinner
                 android:id="@+id/spinnerCargo"
@@ -229,6 +243,7 @@
                 android:layout_marginTop="8dp"
                 android:spinnerMode="dropdown"
                 android:background="@drawable/bg_input"
+                android:textColor="#636363"
                 android:padding="12dp" />
 
             <!-- Campo: Selecciona Imagen -->
@@ -240,7 +255,8 @@
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:layout_marginHorizontal="12dp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textColor="#000"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
