--- a/app/src/main/res/layout/activity_pantalla_empelado_mis_servicios_horario.xml
+++ b/app/src/main/res/layout/activity_pantalla_empelado_mis_servicios_horario.xml
@@ -16,35 +16,38 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--header-->
+        <!-- Header con botón de regreso -->
         <LinearLayout
             android:id="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="48dp"
+            android:background="#FFFFFF"
+            android:elevation="1dp"
+            android:gravity="start"
             android:orientation="horizontal"
-            android:background="@drawable/barra_header"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingEnd="8dp"
-            android:paddingStart="0dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <ImageButton
-                android:id="@+id/back_button"
-                android:layout_width="78dp"
-                android:layout_height="50dp"
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="Volver"
-                android:src="@drawable/ic_left" />
+                android:src="@drawable/icon_regresar"
+                android:contentDescription="Regresar"/>
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:gravity="start|center_vertical"
+                android:id="@+id/tvTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:text="Horarios Asignados"
-                android:textColor="@color/black"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#000000" />
+
         </LinearLayout>
 
         <!-- Filtro: Semana/Mes -->
