--- a/app/src/main/res/layout/activity_pantalla_guardia_lista_de_asistencia.xml
+++ b/app/src/main/res/layout/activity_pantalla_guardia_lista_de_asistencia.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="Lista de Empleados"
+            android:textColor="#000"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -59,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="42dp"
             android:layout_weight="1"
+            android:textColor="#636363"
             android:background="@null"
             android:hint="Buscar por nombre de empleado"
             android:importantForAutofill="no"
@@ -107,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="16dp">>
+                    android:padding="16dp">
 
                     <TextView
                         android:id="@+id/iniciales"
