--- a/app/src/main/res/layout/layout_footer_admin.xml
+++ b/app/src/main/res/layout/layout_footer_admin.xml
@@ -26,8 +26,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:contentDescription="Inicio"
-            android:src="@drawable/home"
-            app:tint="#006699" />
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,8 +57,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:contentDescription="Perfil"
-            android:src="@drawable/profile"
-            app:tint="#A0A0A0" />
+            android:src="@drawable/profile"/>
 
         <TextView
             android:layout_width="wrap_content"
