--- a/app/src/main/res/layout/activity_pantalla_guardia_inicio.xml
+++ b/app/src/main/res/layout/activity_pantalla_guardia_inicio.xml
@@ -117,19 +117,21 @@
             </LinearLayout>
 
 
-            <TextView
+            <Button
                 android:id="@+id/ver_lista_empleados"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:maxLines="1"
                 android:text="Ver Lista"
-                android:textColor="#0369A1"
+                android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:background="@drawable/bg_container"
                 android:paddingHorizontal="10dp"
-                android:paddingVertical="4dp" />
+                android:paddingVertical="4dp"
+                android:clickable="true"
+                android:focusable="true" />
         </LinearLayout>
     </FrameLayout>
 
@@ -471,5 +473,15 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <!-- Footer para guardia -->
+    <include
+        android:id="@+id/footer_guardia"
+        layout="@layout/layout_footer_guardia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
