respaldo hasta icon agregar usaurio

--- a/app/src/main/res/layout/activity_pantalla_administrador_agregar_colaborador.xml
+++ b/app/src/main/res/layout/activity_pantalla_administrador_agregar_colaborador.xml
@@ -42,11 +42,12 @@
 
     <!-- ScrollView para el contenido -->
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/scroll_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@id/layoutHeader"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/footer_admin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -393,5 +394,14 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <include
+        android:id="@+id/footer_admin"
+        layout="@layout/layout_footer_admin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
