--- a/app/src/main/res/layout/activity_pantalla_administrador_asignar_horarios.xml
+++ b/app/src/main/res/layout/activity_pantalla_administrador_asignar_horarios.xml
@@ -78,10 +78,14 @@
 
     <!-- ScrollView para el contenido -->
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/scroll_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@id/search_container">
+        app:layout_constraintTop_toBottomOf="@id/search_container"
+        app:layout_constraintBottom_toTopOf="@id/footer_admin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Contenedor principal del formulario -->
         <LinearLayout
@@ -287,5 +291,14 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <include
+        android:id="@+id/footer_admin"
+        layout="@layout/layout_footer_admin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
