--- a/app/src/main/res/layout/activity_pantalla_administrador_informes_de_asistencia.xml
+++ b/app/src/main/res/layout/activity_pantalla_administrador_informes_de_asistencia.xml
@@ -249,4 +249,13 @@
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/fecha_de_reporte"/>
 
+    <include
+        android:id="@+id/footer_admin"
+        layout="@layout/layout_footer_admin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
