--- a/app/src/main/res/layout/activity_pantalla_administrador_lista_colaboradores.xml
+++ b/app/src/main/res/layout/activity_pantalla_administrador_lista_colaboradores.xml
@@ -89,7 +89,7 @@
         android:clipToPadding="false"
         android:paddingHorizontal="16dp"
         android:paddingBottom="80dp"
-        app:layout_constraintBottom_toTopOf="@id/footer"
+        app:layout_constraintBottom_toTopOf="@id/footer_admin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_container">
@@ -800,7 +800,7 @@
 
     <!-- Footer -->
     <include
-        android:id="@+id/footer"
+        android:id="@+id/footer_admin"
         layout="@layout/layout_footer_admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
