--- a/app/src/main/res/layout/layout_footer_admin.xml
+++ b/app/src/main/res/layout/layout_footer_admin.xml
@@ -44,7 +44,7 @@
         android:layout_weight="1">
 
         <ImageView
-            android:id="@+id/btn_qr"
+            android:id="@+id/btn_añadir_usuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
