--- a/app/src/main/res/drawable/bg_qr_card.xml
+++ b/app/src/main/res/drawable/bg_qr_card.xml
@@ -1,6 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF"/>
-    <corners android:radius="24dp"/>
-    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
+    <gradient
+        android:startColor="#0369A1"
+        android:endColor="#A8CBE2"
+        android:angle="-90"/>
+    <corners android:radius="18dp"/>
 </shape>
