--- a/app/src/main/res/drawable/bg_qr_title_box.xml
+++ b/app/src/main/res/drawable/bg_qr_title_box.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#1976D2"
-        android:endColor="#2196F3"
+        android:startColor="#0369A1"
+        android:endColor="#0369A1"
         android:angle="90"/>
     <corners android:radius="18dp"/>
-    <stroke android:width="3dp" android:color="#1565C0"/>
 </shape>
