--- a/app/src/main/res/layout/activity_pantalla_mi_perfil.xml
+++ b/app/src/main/res/layout/activity_pantalla_mi_perfil.xml
@@ -317,4 +317,12 @@
 
         </LinearLayout>
     </LinearLayout>
+    <include
+        android:id="@+id/footer"
+        layout="@layout/layout_footer_empleado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
